--- a/app/src/main/res/layout/activity_cliente_carrito.xml
+++ b/app/src/main/res/layout/activity_cliente_carrito.xml
@@ -62,14 +62,16 @@
         android:layout_alignParentBottom="true"
         android:orientation="vertical"
         android:padding="16dp"
-        android:background="@drawable/rounded_top">
+        android:background="@drawable/rounded_top"
+        android:backgroundTint="@color/white">
 
         <!-- Total consumo -->
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            android:padding="8dp"
+            android:paddingHorizontal="12dp"
+            android:layout_marginVertical="12dp"
             android:gravity="center_vertical">
 
             <!-- Precio -->
@@ -79,7 +81,7 @@
                 android:layout_height="wrap_content"
                 android:text="TOTAL CONSUMO:"
                 android:fontFamily="@font/sen_font"
-                android:textSize="18sp"
+                android:textSize="16sp"
                 android:textColor="@android:color/black"
                 android:layout_weight="1"/>
 
@@ -89,7 +91,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="S/. 281.20"
-                android:textSize="24sp"
+                android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="@android:color/black" />
         </LinearLayout>
@@ -100,12 +102,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="REALIZAR PEDIDO"
-            android:textSize="18sp"
+            android:textSize="16sp"
             android:backgroundTint="@color/btn_medium"
             android:textColor="@android:color/white"
-            android:layout_marginTop="12dp"
-            android:layout_marginBottom="14dp"
-            android:padding="16dp"
+            android:fontFamily="@font/sen_font"
+            android:layout_margin="8dp"
+            android:padding="14dp"
             android:textStyle="bold"/>
     </LinearLayout>
 
